Improve configure error message about missing Linux headers

--- a/configure.ac
+++ b/configure.ac
@@ -529,7 +529,7 @@ dnl check for kernel headers required by src/bridge.c
 dnl
 if test "$with_qemu" = "yes" || test "$with_lxc" = "yes" ; then
   AC_CHECK_HEADERS([linux/param.h linux/sockios.h linux/if_bridge.h linux/if_tun.h],,
-                   AC_MSG_ERROR([You must install kernel-headers in order to compile libvirt]))
+                   AC_MSG_ERROR([You must install kernel-headers in order to compile libvirt with QEMU or LXC support]))
 fi
 
 
